<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_time_table"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_time_table" />

    <item
        android:id="@+id/navigation_Canteen"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_canteen" />

    <item
        android:id="@+id/navigation_Amenetis"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_aminetis" />

    <item
        android:id="@+id/navigation_Links"
        android:icon="@drawable/ic_link_black_24dp"
        android:title="@string/title_link" />

    <item
        android:id="@+id/navigation_Message"
        android:icon="@drawable/ic_message_black_24dp"
        android:title="@string/title_message" />
</menu>
